[GM3Restyling] Use tokens for outline views update
Bug: 325443114
Change-Id: I82da08d090bf2a00ba041f220ce323363a78264a
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6218360
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/elements/elementsTreeOutline.css
+++ b/front_end/panels/elements/elementsTreeOutline.css
@@ -122,7 +122,7 @@
   content: "\A0\A0";
   color: transparent;
   text-shadow: none;
-  margin: -3px 2px 0 -3px;
+  margin: -3px var(--sys-size-2) 0 -3px;
   background-color: var(--icon-default);
 }
 
