--- a/front_end/panels/sources/sourcesPanel.css
+++ b/front_end/panels/sources/sourcesPanel.css
@@ -66,6 +66,11 @@
   display: flex;
 }
 
+.y-overflow-only {
+  overflow: hidden auto;
+  background-color: var(--sys-color-cdt-base-container);
+}
+
 .cursor-auto {
   cursor: auto;
 }
