[GM3Restyling] Add badges to tabs and use these for annotations
Screenshot: https://imgur.com/a/GyRpqCE

Bug: 390556283
Change-Id: I4cdc9f9e84fb6a7780a90d7250722d2a7c9c02d8
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6218241
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/ui/legacy/tabbedPane.css
+++ b/front_end/ui/legacy/tabbedPane.css
@@ -176,6 +176,21 @@
   padding: 4px;
 }
 
+.badge {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  height: 15px;
+  width: 15px;
+  line-height: 15px;
+  border-radius: var(--sys-shape-corner-full);
+  margin-left: var(-sys-size-2);
+  background-color: var(--sys-color-error);
+  color: var(--sys-color-on-error);
+  font-size: var(--sys-typescale-body5-size);
+  font-weight: var(--ref-typeface-weight-bold);
+}
+
 .tabbed-pane-header-tab {
   font: var(--sys-typescale-body4-medium);
   color: var(--sys-color-on-surface-subtle);
