Use <devtools-new-data-grid> in the SharedStorageAccessGrid
Bug: 390346490
Change-Id: I3496f89816c5f652350b22e51afc5791e0ae4698
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6213931
Reviewed-by: Wolfgang Beyer <wolfi@chromium.org>
Auto-Submit: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>

--- a/front_end/panels/application/components/sharedStorageAccessGrid.css
+++ b/front_end/panels/application/components/sharedStorageAccessGrid.css
@@ -11,8 +11,7 @@
   font-size: 15px;
 }
 
-devtools-data-grid-controller {
-  border: 1px solid var(--sys-color-divider);
+devtools-new-data-grid {
   margin-top: 20px;
 }
 
