Use <devtools-new-data-grid> in the Autofill View
To make it highlight on hover work, added delegation for mouseenter and mouseleave events

Bug: 390346490
Change-Id: I0275d9e41de80b2c5f93482d7a9268054f8c820d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6214430
Reviewed-by: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>

--- a/front_end/panels/autofill/autofillView.css
+++ b/front_end/panels/autofill/autofillView.css
@@ -46,6 +46,11 @@ main {
   flex-grow: 1;
 }
 
+devtools-new-data-grid {
+  border: none;
+  height: 100%;
+}
+
 .checkbox-label {
   display: flex;
   align-items: center;
