Add accessibility features to Privacy tools
First is adding headings to the tools to make them available to
screen readers: b/393131397

Second is making the enterprise icon focusable so that the tooltip
explanation can be read by a screen reader: b/393159286

Bug: b/393131397, b/393159286
Change-Id: I82ba7c1c5ccb68b3a71fdc706362c51b207f1b22
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6220105
Commit-Queue: Joshua Thomas <masnoble@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Reviewed-by: Shuran Huang <shuuran@chromium.org>

--- a/front_end/panels/security/cookieControlsView.css
+++ b/front_end/panels/security/cookieControlsView.css
@@ -22,7 +22,8 @@
   padding-left: var(--sys-size-5);
 }
 
-.title {
+h1 {
+  margin: 0;
   font: var(--sys-typescale-headline4);
 }
 
@@ -65,8 +66,9 @@
   gap: var(--sys-size-2);
 }
 
-.card-title {
+h2 {
   font: var(--sys-typescale-headline5);
+  margin: 0;
 }
 
 .body {
@@ -85,8 +87,9 @@
   padding-left: var(--sys-size-8);
 }
 
-.card-row-title {
+h3 {
   font: var(--sys-typescale-body4-medium);
+  margin: 0;
 }
 
 .x-link {
