--- a/front_end/panels/security/cookieReportView.css
+++ b/front_end/panels/security/cookieReportView.css
@@ -23,8 +23,9 @@
   padding-right: var(--sys-size-6);
   min-width: var(--sys-size-31);
 
-  .title {
+  h1 {
     font: var(--sys-typescale-headline4);
+    margin: 0;
   }
 }
 
