[GM3Restyling] Add trailing icons to tabs
Screenshot: https://imgur.com/a/i5eVadb

Bug: 390556283
Change-Id: Icd005b7e45134cbee5f397cbaa6fd6b2c54185af
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6218248
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/ui/legacy/inspectorViewTabbedPane.css
+++ b/front_end/ui/legacy/inspectorViewTabbedPane.css
@@ -5,7 +5,7 @@
  */
 
 .tabbed-pane-header-tab {
-  & > .tabbed-pane-header-tab-icon > devtools-icon {
+  & > .tabbed-pane-header-tab-suffix-element devtools-icon.warning {
     width: 14px;
     height: 14px;
     color: var(--icon-warning);
