--- a/front_end/panels/application/components/bounceTrackingMitigationsView.css
+++ b/front_end/panels/application/components/bounceTrackingMitigationsView.css
@@ -3,7 +3,7 @@
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file.
  */
-devtools-new-data-grid {
+devtools-data-grid {
   margin-top: 0;
 }
 
