[GM3Restyling] Show tab icons on the right
Also adjust spacing and sizes

Screenshot: https://imgur.com/a/1WztIZC

Bug: 390556283
Change-Id: I5a0dd41668c41df028ff3d4c41e900a703a61428
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6218495
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/legacy/tabbedPane.css
+++ b/front_end/ui/legacy/tabbedPane.css
@@ -172,8 +172,14 @@
 }
 
 .tabbed-pane-header-tab-suffix-element {
-  width: 20px;
-  padding: 4px;
+  height: var(--sys-size-8);
+  width: var(--sys-size-8);
+  padding-left: var(--sys-size-2);
+
+  &:has(.badge) {
+    width: 17px;
+    margin-left: var(--sys-size-2);
+  }
 }
 
 .badge {
