--- a/front_end/ui/legacy/tabbedPane.css
+++ b/front_end/ui/legacy/tabbedPane.css
@@ -190,12 +190,20 @@
   width: 15px;
   line-height: 15px;
   border-radius: var(--sys-shape-corner-full);
-  margin-left: var(-sys-size-2);
+  margin-left: var(--sys-size-2);
   background-color: var(--sys-color-error);
   color: var(--sys-color-on-error);
   font-size: var(--sys-typescale-body5-size);
   font-weight: var(--ref-typeface-weight-bold);
+
+  &.primary {
+    background: var(--sys-color-cdt-base-container);
+    color: var(--sys-color-primary);
+    border: 1px solid   var(--sys-color-primary);
+    font-weight: normal;
+  }
 }
+
 
 .tabbed-pane-header-tab {
   font: var(--sys-typescale-body4-medium);
