--- a/front_end/panels/timeline/components/insights/baseInsightComponent.css
+++ b/front_end/panels/timeline/components/insights/baseInsightComponent.css
@@ -205,6 +205,7 @@ ul.insight-icon-results {
   border: none;
   padding: 0;
   font: inherit;
+  text-align: left;
 }
 
 .timeline-link.invalid-link {
