RPP: Fix 3P table scrolling, plus Summary tab polish
- Scrolling was mostly buggy due to a hardcoded row height in DataGrid (20), whereas our rows were not. It's dynamic now and doesn't force a layout thrash either.
- All of TimelineTreeView styles have been in timelinePanel.css, but due to shadow DOM, the 3P table wasn't using them. This lead to some unpredictability. Now, 3PTTV extends the component _and_ its styles.
  - This included moving 3P table styles from timelineSummary.css to timelinePanel.css. That said, I've adjusted 60% of those styles, too.
- Reduced DOM complexity of the summary: fewer containers, removed use of slots. Also removed a div within .entity-badge
- A few renames to help distinguish Details (the pane with tabs), Summary (the first tab which is often used to show the _details_ of a trace event), the Category Summary (the Scripting/Rendering/etc numbers), and Range Summary (a container holding the Category Summary and 3P table, side by side)
- Pixel-perfect vertical rhythm, matching mocks: https://screenshot.googleplex.com/C2Pkr5anVgU3F5o (That was fun :)
- Changed how layout of the bottom-up button works, to get more predictable layout behavior.

Change-Id: Ia92a4a78e17813e1ce9c64d313e2a978f9aaf7d5
Bug: 388458798
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6221821
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Adriana Ixba <aixba@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/timelinePanel.css
+++ b/front_end/panels/timeline/timelinePanel.css
@@ -189,7 +189,6 @@
   position: relative;
   background-color: var(--sys-color-cdt-base-container);
   user-select: text;
-  display: block;
 }
 
 .timeline-details-view-block {
@@ -420,8 +419,7 @@
   position: relative;
 }
 
-.timeline-tree-view .data-grid div.background-percent-bar {
-  float: right;
+.timeline-tree-view .data-grid div.background-bar-text {
   position: relative;
   z-index: 1;
 }
@@ -443,7 +441,6 @@
 .timeline-tree-view .data-grid .name-container {
   display: flex;
   align-items: center;
-  padding-left: 2px;
 }
 
 .timeline-tree-view .data-grid .name-container .activity-icon {
@@ -486,15 +483,16 @@
 
 .timeline-tree-view .data-grid .background-bar-container {
   position: absolute;
-  left: 3px;
-  right: 0;
+  /* Small gap on the left side so the first row (which has a 100% width bar, has a distinguishable bar */
+  inset: 0 0 0 2px;
 }
 
 .timeline-tree-view .data-grid .background-bar {
-  float: right;
   height: 18px;
   background-color: var(--sys-color-surface-yellow);
   border-bottom: 1px solid var(--sys-color-yellow-outline);
+  position: absolute;
+  right: 0;
 }
 
 .timeline-tree-view .data-grid .selected .background-bar {
@@ -544,7 +542,7 @@
   }
 
   .timeline-tree-view .data-grid tr.selected span.percent-column,
-  .timeline-tree-view .data-grid tr.selected div.background-percent-bar span,
+  .timeline-tree-view .data-grid tr.selected div.background-bar-text span,
   .timeline-tree-view .data-grid tr.selected .name-container .activity-link .devtools-link .timeline-link {
     color: HighlightText;
   }
@@ -560,8 +558,10 @@
   }
 }
 
-.timeline-details-view-body > div {
-  overflow: hidden;
+.timeline-details-range-summary {
+  overflow: auto;
+  height: 100%;
+  margin: var(--sys-size-4) 0;
 }
 
 .timeline-details-chip-title > div {
@@ -594,6 +594,115 @@
 
 .timeline-tree-view .data-grid .name-container div {
   flex: none;
+}
+
+
+devtools-performance-third-party-tree-view {
+  .background-bar-container {
+    /* Dont need the bars in 3p table */
+    display: none;
+  }
+
+   .timeline-tree-view devtools-toolbar {
+    border: 0;
+   }
+
+  .timeline-tree-view .data-grid .odd {
+    background: none;
+  }
+
+  .timeline-tree-view .data-grid {
+    border-width: 0 !important; /* stylelint-disable-line declaration-no-important */
+
+    th {
+      background-color: var(--sys-color-cdt-base-container);
+      font-weight: var(--ref-typeface-weight-medium);
+      /* Center to give some gap against sorting triangle */
+      text-align: center;
+
+      &.site-column {
+        text-align: left;
+      }
+    }
+
+    tr .numeric-column,
+    tr .site-column {
+      border-left: none;
+      border-bottom: var(--sys-size-1) solid var(--sys-color-divider);
+      /* Don't let devtools-button size mess with things */
+      contain: strict;
+      padding: 0;
+      line-height: 21px;
+    }
+
+    .bottom-filler-td,
+    th.sortable {
+      border: none;
+    }
+
+    tr {
+      height: 22px;
+    }
+
+    devtools-button {
+      display: inline-flex;
+      visibility: hidden;
+      margin: 0 8px 0 4px;
+      vertical-align: top;
+    }
+
+    tr.revealed:hover,
+    tr.selected {
+     devtools-button {
+        visibility: visible;
+      }
+    }
+
+    /* Default data-grid has this element on the edge of the rows,
+      we don't need them for the 3P table. So for now set display to none. */
+    .corner {
+      display: none;
+    }
+
+    .data-grid-resizer:hover {
+        background: linear-gradient(to right, transparent, transparent 2px, var(--sys-color-divider) 2px, var(--sys-color-divider) 3px, transparent 3px) no-repeat 0 0 / 100% 100%;
+    }
+  }
+
+  .widget.vbox.timeline-tree-view {
+    /* See column width comments in populateColumns() */
+    max-width: min(100%, 550px);
+    min-width: 350px; /* Lower than this, there's not enough room for the entity name */
+    padding: 0 var(--sys-size-8) 0 var(--sys-size-6);
+    border-left: var(--sys-size-1) solid var(--sys-color-divider);
+  }
+
+  /* While timeline treeview name-container uses flexbox to layout, it's overkill for this table's purposes.
+     By not using it, we can benefit from text-overflow:ellipsis applying correctly to names and entity-badges */
+ .timeline-tree-view .data-grid .name-container {
+    display: block;
+    padding-left: 2px;
+
+    .activity-name {
+      display: inline;
+    }
+
+    .activity-icon-container {
+      display: none;
+    }
+
+    .entity-badge {
+      margin-left: var(--sys-size-4);
+      font-weight: var(--ref-typeface-weight-medium);
+      padding: 0 var(--sys-size-2);
+      background-color: var(--sys-color-tonal-container);
+      border-radius: var(--sys-shape-corner-extra-small);
+      height: 16px;
+      line-height: 16px;
+      font-size: var(--sys-typescale-body5-size);
+      display: inline-block;
+    }
+ }
 }
 
 devtools-feedback-button {
