--- a/front_end/panels/timeline/components/timelineSummary.css
+++ b/front_end/panels/timeline/components/timelineSummary.css
@@ -4,27 +4,36 @@
  * found in the LICENSE file.
  */
 
+:host {
+  display: contents;
+}
+
 .timeline-summary {
   font-size: var(--sys-typescale-body4-size);
   display: flex;
   flex-direction: column;
-  padding: var(--sys-size-4) var(--sys-size-8) var(--sys-size-4);
-  gap: var(--sys-size-5);
-  float: left;
+  padding: 0 var(--sys-size-6) var(--sys-size-4) var(--sys-size-8) ;
+  gap: 2px;
+  min-width: 192px;
+
 }
 
 .summary-range {
   font-weight: var(--ref-typeface-weight-medium);
+  height: 23px;
+  line-height: 21px;
+  padding-top: 0.5px;
 }
 
 .category-summary {
-  gap: var(--sys-size-3);
+  gap: var(--sys-size-4);
   display: flex;
   flex-direction: column;
 }
 
 .category-row {
-  display: inline-block;
+  min-height: 16px;
+  line-height: 16px;
 }
 
 .category-swatch {
@@ -38,7 +47,8 @@
 }
 
 .category-name {
-  display: inline-block;
+  display: inline;
+  word-break: break-all;
 }
 
 .category-value {
@@ -61,95 +71,4 @@
   height: var(--sys-size-8);
   background-color: var(--sys-color-surface-yellow);
   border-bottom: var(--sys-size-1) solid var(--sys-color-yellow-outline);
-}
-
-.data-container {
-  height: 200px;
-}
-
-.timeline-tree-view .data-grid {
-  border-top: none !important; /* stylelint-disable-line declaration-no-important */
-
-  tr .numeric-column,
-  tr .site-column {
-    border-left: none;
-    border-bottom: var(--sys-size-1) solid var(--sys-color-divider);
-    height: auto;
-    min-height: var(--sys-size-12);
-    align-content: center;
-  }
-
-  .bottom-filler-td,
-  th.sortable {
-    border-left: none;
-  }
-
-  th {
-    background-color: var(--sys-color-cdt-base-container);
-    font-weight: var(--ref-typeface-weight-medium);
-  }
-
-  tr.revealed:hover,
-  tr.selected {
-    .button-container {
-      align-items: center;
-      display: block;
-    }
-  }
-
-  /* Default data-grid has this element on the edge of the rows,
-    we don't need them for the 3P table. So for now set display to none.
-   */
-  .corner {
-    display: none;
-  }
-}
-
-.widget.vbox.timeline-tree-view {
-  height: var(--sys-size-25);
-  max-width: var(--sys-size-35);
-}
-
-.third-party-table {
-  display: flex;
-  margin: var(--sys-size-4) var(--sys-size-8) var(--sys-size-4);
-  padding-left: var(--sys-size-4);
-  padding-right: var(--sys-size-4);
-  border-left: var(--sys-size-1) solid var(--sys-color-divider);
-  border-right: var(--sys-size-1) solid var(--sys-color-divider);
-  max-width: var(--sys-size-35);
-}
-
-.name-container {
-  display: flex;
-  align-items: center;
-}
-
-.entity-badge {
-  margin-left: var(--sys-size-4);
-}
-
-.entity-badge-name {
-  font-weight: var(--ref-typeface-weight-bold);
-  padding-left: var(--sys-size-3);
-  padding-right: var(--sys-size-3);
-  background-color: var(--sys-color-tonal-container);
-  border-radius: var(--sys-shape-corner-extra-small);
-}
-
-.activity-name {
-  text-overflow: ellipsis;
-  overflow: inherit;
-  max-width: 60%;
-}
-
-.hover-bottom-up-button {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.button-container {
-  display: none;
 }
