[cleanup] Refactor and simplify the `Card` component a bit.
This CL streamlines the `<devtools-card>` component's CSS and simplifies
the `<slot>` handling. It also removes the `.data` setter and simply
uses a `"heading"` attribute (plus the slotted children).

Bug: 343003619, 301364727
Change-Id: I6128cb882d7752037819cfbaa008b6cb07bea65b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6216268
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/components/cards/card.css
+++ b/front_end/ui/components/cards/card.css
@@ -3,50 +3,55 @@
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file.
  */
+
 :host {
   display: flex;
   max-width: var(--sys-size-35);
   width: 100%;
 }
 
-.card {
+:host([hidden]) {
+  display: none;
+}
+
+#card {
   break-inside: avoid;
   min-width: var(--sys-size-31);
   margin: var(--sys-size-3) var(--sys-size-6) var(--sys-size-5) var(--sys-size-5);
   flex: 1;
-}
 
-.heading-wrapper {
-  display: flex;
-  white-space: nowrap;
-  margin-bottom: var(--sys-size-5);
-}
+  #heading {
+    display: flex;
+    white-space: nowrap;
+    margin-bottom: var(--sys-size-5);
 
-.heading {
-  color: var(--sys-color-on-surface);
-  font: var(--sys-typescale-body2-medium);
-}
+    [role="heading"] {
+      color: var(--sys-color-on-surface);
+      font: var(--sys-typescale-body2-medium);
+    }
 
-.heading-icon {
-  margin-right: var(--sys-size-3);
-}
+    [name="heading-prefix"]::slotted(*) {
+      margin-right: var(--sys-size-3);
+    }
 
-slot[name="heading-suffix"]::slotted(*) {
-  margin-left: auto;
-}
+    [name="heading-suffix"]::slotted(*) {
+      margin-left: auto;
+    }
+  }
 
-.content-container {
-  border-radius: var(--sys-shape-corner-small);
-  box-shadow: var(--sys-elevation-level2);
-  display: flex;
-  flex-direction: column;
-  background: var(--app-color-card-background);
-}
+  #content {
+    border-radius: var(--sys-shape-corner-small);
+    box-shadow: var(--sys-elevation-level2);
+    display: flex;
+    flex-direction: column;
+    background: var(--app-color-card-background);
 
-slot[name="content"]::slotted(*) {
-  padding: var(--sys-size-4) var(--sys-size-6);
-}
+    &::slotted(*) {
+      padding: var(--sys-size-4) var(--sys-size-6);
+    }
 
-slot[name="content"]::slotted(*:not(:first-child)) {
-  border-top: var(--sys-size-1) solid var(--app-color-card-divider);
+    &::slotted(*:not(:first-child)) {
+      border-top: var(--sys-size-1) solid var(--app-color-card-divider);
+    }
+  }
 }
