--- a/front_end/panels/timeline/components/sidebarAnnotationsTab.css
+++ b/front_end/panels/timeline/components/sidebarAnnotationsTab.css
@@ -24,7 +24,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 6px;
+  padding: 0 var(--sys-size-4);
 
   .delete-button {
     visibility: hidden;
