--- a/front_end/ui/legacy/treeoutline.css
+++ b/front_end/ui/legacy/treeoutline.css
@@ -91,6 +91,7 @@ ol.tree-outline:not(.hide-selection-when-blurred) li.selected:focus {
 
   & ::selection {
     background-color: var(--sys-color-state-focus-select);
+    color: currentcolor;
   }
 
   & *:not(devtools-icon) {
