--- a/front_end/ui/components/tree_outline/treeOutline.css
+++ b/front_end/ui/components/tree_outline/treeOutline.css
@@ -96,6 +96,7 @@ li.is-top-level:last-child {
 
   & ::selection {
     background-color: var(--sys-color-state-focus-select);
+    color: currentcolor;
   }
 }
 
