[GM3Restyling] Update console and issues counter tab buttons
Screenshot: https://imgur.com/a/GeBAyQo

Bug: 390556283
Change-Id: I9c7aa6941aaa549ec595be307142710e9c093bad
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6218230
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/console/consoleView.css
+++ b/front_end/panels/console/consoleView.css
@@ -44,6 +44,10 @@
   flex: 1 1 auto;
 }
 
+#console-issues-counter {
+  margin-top: 0;
+}
+
 .console-toolbar-container > devtools-toolbar {
   background-color: var(--sys-color-cdt-base-container);
   border-bottom: 1px solid var(--sys-color-divider);
