--- a/front_end/ui/components/icon_button/iconButton.css
+++ b/front_end/ui/components/icon_button/iconButton.css
@@ -22,7 +22,10 @@
 }
 
 .icon-button.with-click-handler {
-  padding: 0 4px;
+  padding: 0;
+  margin: 0;
+  height: 18px;
+  border-radius: var(--sys-shape-corner-extra-small);
 }
 
 .icon-button.with-click-handler:hover {
@@ -33,20 +36,21 @@
   background-color: var(--sys-color-state-hover-on-subtle);
 }
 
-.icon-button-title {
-  margin-left: 0.5ex;
-}
-
 .compact .icon-button-title {
   display: none;
 }
 
-.status-icon {
-  margin-left: 1ex;
+.icon-button-title {
+  margin-right: var(--sys-size-2);
+
+  + devtools-icon {
+    margin-left: var(--sys-size-3);
+  }
 }
 
-.status-icon:first-child {
-  margin-left: inherit;
+.status-icon {
+  margin-right: var(--sys-size-1);
+  margin-left: var(--sys-size-2);
 }
 
 @media (forced-colors: active) {
