--- a/front_end/ui/legacy/tabbedPane.css
+++ b/front_end/ui/legacy/tabbedPane.css
@@ -196,6 +196,13 @@
   color: var(--sys-color-on-error);
   font-size: var(--sys-typescale-body5-size);
   font-weight: var(--ref-typeface-weight-bold);
+
+  &.primary {
+    background: var(--sys-color-cdt-base-container);
+    color: var(--sys-color-primary);
+    border: var(--sys-size-1) solid var(--sys-color-primary);
+    font-weight: normal;
+  }
 }
 
 
