[GM3Restyling] Empty state updates
This is updating the Prerendering and the Session storage view for
value preview.

Screenshot: https://imgur.com/a/90rmPtO

Bug: 325443331
Change-Id: Ied99b7a221e8483b81fd0c17f879b70a2e818ef4
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6219002
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/application/preloading/components/preloadingDetailsReportView.css
+++ b/front_end/panels/application/preloading/components/preloadingDetailsReportView.css
@@ -3,6 +3,14 @@
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file.
  */
+:host {
+  display: flex;
+  height: 100%;
+}
+
+devtools-report {
+  flex-grow: 1;
+}
 
 button.link {
   color: var(--sys-color-primary);
