Fix data grid selection with keyboard navigation
1) Ensure only one row is highlighted when using keyboard navigation
Currently keyboard navigation doesn't change activeElement, but sets 'selected' CSS class, which can results in one row highlighted due to the `:focus-within` rule and the other due to the `.selected` rule
2) Do not reset focus on keydown if the data grid is in the shadow root
Currently we check if `document.activeElement` is in the data grid's subtree, but `document.activeElement` might be the shadow host of the data grid.

Bug: 394287937
Change-Id: If779219871d1e076e0b3cbf937cf2dae577058f2
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6226108
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Auto-Submit: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/ui/legacy/components/data_grid/dataGrid.css
+++ b/front_end/ui/legacy/components/data_grid/dataGrid.css
@@ -236,7 +236,7 @@
   }
 }
 
-.data-grid tbody tr.revealed:focus-within {
+.data-grid:focus-within tbody tr.revealed.selected {
   background-color: var(--sys-color-tonal-container);
 }
 
