Make tab header background opaque when dragging
R=kimanh@chromium.org

Fixed: 394512275
Change-Id: I8f1f58e7d5a50eb42dc2feb97edfe4e5a012a478
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6233936
Commit-Queue: Yang Guo <yangguo@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Auto-Submit: Yang Guo <yangguo@chromium.org>

--- a/front_end/ui/legacy/tabbedPane.css
+++ b/front_end/ui/legacy/tabbedPane.css
@@ -250,12 +250,12 @@
   color: var(--sys-color-primary);
 }
 
-.tabbed-pane-header-tab.dragging {
+.tabbed-pane-header-tab.selected.dragging {
   --override-dragging-box-shadow-color: rgb(0 0 0 / 37%);
 
   position: relative;
   box-shadow: 0 1px 4px 0 var(--override-dragging-box-shadow-color);
-  background-color: var(--sys-color-state-hover-on-subtle);
+  background-color: var(--app-color-toolbar-background);
 }
 
 .theme-with-dark-background .tabbed-pane-header-tab.dragging,
