Fix input selection text color
Bug: 394380759
Change-Id: I0f3e71d2a057c721d59140f14254ccf0b1c5196c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6239497
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -49,7 +49,7 @@ body {
   font-size: var(--source-code-font-size) !important; /* stylelint-disable-line declaration-no-important */
   white-space: pre-wrap;
 
-  &::selection {
+  &:not(input)::selection {
     color: var(--sys-color-on-surface);
   }
 }
