Make the filter bar grow responsively
R=kimanh@chromium.org

Fixed: 394111299
Change-Id: I960b1cfaf10b5a6a1de12a9692e05ca89ac66399
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6239713
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Yang Guo <yangguo@chromium.org>
Auto-Submit: Yang Guo <yangguo@chromium.org>

--- a/front_end/ui/legacy/filter.css
+++ b/front_end/ui/legacy/filter.css
@@ -38,7 +38,9 @@
 }
 
 .text-filter {
-  width: 200px;
+  flex-grow: 1;
+  min-width: var(--sys-size-25);
+  max-width: var(--sys-size-36);
 }
 
 .filter-bitset-filter {
