Fix checkbox text in Settings > Experiments getting cropped
Fixed: 394757435
Change-Id: Ice479fbdac0e7615554d987897d0a2f6cc8ba2b7
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6243393
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -54,6 +54,10 @@ body {
   }
 }
 
+.source-code.breakpoint {
+  white-space: nowrap;
+}
+
 .source-code .devtools-link.text-button {
   max-width: 100%;
   overflow: hidden;
