[GM3Restyling] Update Dialog and Shortcut Dialog styles
Remove unused styles as a drive-by

Screenshot: https://imgur.com/a/EC1uLNX

Bug: 325442935
Change-Id: I1ffc8339c761277e83a5c96002045bd6201e1665
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6243196
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/components/dialogs/dialog.css
+++ b/front_end/ui/components/dialogs/dialog.css
@@ -59,11 +59,16 @@ dialog:focus-visible {
 
   .dialog-header-text {
     font: var(--sys-typescale-body2-medium);
+    padding-top: var(--sys-size-3);
+  }
+
+  devtools-button {
+    margin: 3px;
   }
 }
 
 .dialog-content {
-  padding: 0 0 var(--sys-size-7);
+  padding: 0 var(--sys-size-8) var(--sys-size-7) var(--sys-size-8);
   overflow: hidden;
 }
 
