--- a/front_end/panels/timeline/components/ignoreListSetting.css
+++ b/front_end/panels/timeline/components/ignoreListSetting.css
@@ -4,8 +4,7 @@
  * found in the LICENSE file.
  */
 .ignore-list-setting-content {
-  padding: 0 var(--sys-size-8);
-  width: 280px;
+  max-width: var(--sys-size-30);
 }
 
 .ignore-list-setting-description {
