[GM3Restyling] Update preloading warning dialog
Screenshot: https://imgur.com/a/l8L8MNP

Bug: 325442935
Change-Id: I37af565fabd0511eeffa656c6cf85daac5d63d0c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6243823
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/application/preloading/components/preloadingDisabledInfobar.css
+++ b/front_end/panels/application/preloading/components/preloadingDisabledInfobar.css
@@ -11,35 +11,26 @@
   display: flex;
 }
 
-#contents {
-  margin-top: calc(-1 * var(--sys-size-6));
-  padding: 0 var(--sys-size-8) var(--sys-size-2);
-}
-
-#contents * {
-  background: var(--color-background-elevation-dark-only);
-}
-
 #contents .key {
   grid-column-start: span 2;
-  padding: 12px 0;
   font-weight: bold;
-  margin-bottom: -1.2em;
 }
 
 #contents .value {
   grid-column-start: span 2;
-  padding: 12px 0;
+  margin-top: var(--sys-size-6);
 }
 
 #footer {
+  margin-top: var(--sys-size-6);
+  margin-bottom: var(--sys-size-2);
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   grid-column-start: span 2;
 }
 
-#footer .icon-link {
-  vertical-align: sub;
-  float: right;
+x-link { /* stylelint-disable-line selector-type-no-unknown */
+  color: var(--sys-color-primary);
+  text-decoration-line: underline;
 }
